--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jawdat860.githup.io/deploy/",
+  "homepage": "https://jawdat860.githup.io/testdeploy/",
   "name": "deploy",
   "private": true,
   "version": "0.0.0",
